Fix globals save loading. Implement save/load menus

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -327,6 +327,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/RTS.RTS_GameInstance.OnGameSaved",NewName="/Script/RTS.RTS_GameInstance.HandleGameSaved")
 +PropertyRedirects=(OldName="/Script/RTS.RTS_SaveGame.ActorSaveRecords",NewName="/Script/RTS.RTS_SaveGame.WorldActorsRecords")
 +PropertyRedirects=(OldName="/Script/RTS.RTS_SaveGame.ActorSaveRecords",NewName="/Script/RTS.RTS_SaveGame.WorldActorsRecords")
++PropertyRedirects=(OldName="/Script/RTS.SaveGameSubsystem.DefaultSaveGameObject",NewName="/Script/RTS.SaveGameSubsystem.SaveGame_Default")
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=DynamicModifiersOnly
