Fix slot metadata saving. Update save/load menus panels. Add slots list and slot item widget

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -328,6 +328,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/RTS.RTS_SaveGame.ActorSaveRecords",NewName="/Script/RTS.RTS_SaveGame.WorldActorsRecords")
 +PropertyRedirects=(OldName="/Script/RTS.RTS_SaveGame.ActorSaveRecords",NewName="/Script/RTS.RTS_SaveGame.WorldActorsRecords")
 +PropertyRedirects=(OldName="/Script/RTS.SaveGameSubsystem.DefaultSaveGameObject",NewName="/Script/RTS.SaveGameSubsystem.SaveGame_Default")
++PropertyRedirects=(OldName="/Script/RTS.LoadGameMenu.SelectedItem",NewName="/Script/RTS.LoadGameMenu.SelectedSlotData")
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=DynamicModifiersOnly
