Add some tweaks to an existing features, remove procedural world generation for now

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -335,6 +335,7 @@ ManualIPAddress =
 +PropertyRedirects=(OldName="/Script/RTS.NoiseLayer.Scale",NewName="/Script/RTS.NoiseLayer.Frequency")
 +PropertyRedirects=(OldName="/Script/RTS.WorldGenerator.TerrainSize",NewName="/Script/RTS.WorldGenerator.Resolution")
 +PropertyRedirects=(OldName="/Script/RTS.WorldGenerator.TerrainSize",NewName="/Script/RTS.WorldGenerator.Resolution")
++FunctionRedirects=(OldName="/Script/RTS.WorldGenerator.GenerateMesh",NewName="/Script/RTS.WorldGenerator.GenerateWorld")
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration = DynamicModifiersOnly
