--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -336,6 +336,7 @@ ManualIPAddress =
 +PropertyRedirects=(OldName="/Script/RTS.WorldGenerator.TerrainSize",NewName="/Script/RTS.WorldGenerator.Resolution")
 +PropertyRedirects=(OldName="/Script/RTS.WorldGenerator.TerrainSize",NewName="/Script/RTS.WorldGenerator.Resolution")
 +FunctionRedirects=(OldName="/Script/RTS.WorldGenerator.GenerateMesh",NewName="/Script/RTS.WorldGenerator.GenerateWorld")
++FunctionRedirects=(OldName="/Script/RTS.RTS_BuildPreview.InitBuilding",NewName="/Script/RTS.RTS_BuildPreview.Init")
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration = DynamicModifiersOnly
