--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -337,6 +337,8 @@ ManualIPAddress =
 +PropertyRedirects=(OldName="/Script/RTS.WorldGenerator.TerrainSize",NewName="/Script/RTS.WorldGenerator.Resolution")
 +FunctionRedirects=(OldName="/Script/RTS.WorldGenerator.GenerateMesh",NewName="/Script/RTS.WorldGenerator.GenerateWorld")
 +FunctionRedirects=(OldName="/Script/RTS.RTS_BuildPreview.InitBuilding",NewName="/Script/RTS.RTS_BuildPreview.Init")
++PropertyRedirects=(OldName="/Script/RTS.RTS_SaveGame.componentsData",NewName="/Script/RTS.RTS_SaveGame.ComponentsData")
++PropertyRedirects=(OldName="/Script/RTS.RTS_BuildPreview._buildingTaskID",NewName="/Script/RTS.RTS_BuildPreview._buildingTask")
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration = DynamicModifiersOnly
